--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".cKrakow"/>
-        <activity android:name=".cTorun"/>
-        <activity android:name=".cFrombork"/>
+        <activity android:name=".cLidzbark"></activity>
+        <activity android:name=".cOlsztyn" />
+        <activity android:name=".cPadwa" />
+        <activity android:name=".cKrakow" />
+        <activity android:name=".cTorun" />
+        <activity android:name=".cFrombork" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
