--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven{ url "http://maven.appfoundry.be"}
     }
+
 }
 
 task clean(type: Delete) {
