--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
+/build/generated
+/build/intermediates
+/build/outputs/logs
+/build/tmp
 /captures
 .externalNativeBuild
