--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
 
         <activity
-            android:name=".cOlsztyn"
+            android:name=".CityActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".cDobre"
